--- a/fieldset.html
+++ b/fieldset.html
@@ -42,6 +42,119 @@
         <fieldset>
             <legend>배송 정보</legend>
         </fieldset>
+        <div>
+            <input type="submit" value="주문하기">
+            <input type="reset" value="취소하기">
+            <input type="button" value="공지창 열기" onclick="window.open('notice.html')">
+        </div>
+        <label for="user_name">이름</label>
+        <input type="text" id="user_name" autofocus>
+        <label for="user_phone">이름</label>
+        <input type="tel" id="user_phone" placeholder="하이픈빼고입력하세요(01012341234)">
     </form>
+
+
+    <div id="content">
+        <h1>회원가입을 축하드립니다</h1>
+        <form>
+            <fieldset>
+                <legend>사용자정보</legend>
+                <u1>
+                    <li>
+                        <label for="uid">아이디</label>
+                        <input type="text" id="uid">
+                    </li>
+                    <li>
+                        <label for="umail">이메일</label>
+                        <input type="email" id="umail">
+                    </li>
+                    <li>
+                        <label for="pwd1">비밀번호</label>
+                        <input type="password" id="pwd1">
+                    </li>
+                    <li>
+                        <label for="pwd2">비밀번호확인</label>
+                        <input type="password" id="pwd2">
+                    </li>
+                    <li>
+                        <label for="path">가입경로</label>
+                        <select id="path">
+                            <option value="blog">블로그</option>
+                            <option value="search">검색</option>
+                            <option value="sns">sns</option>
+                            <option value="etc">기타</option>
+                        </select>
+                    </li>
+                    <label for="memo">메모</label>
+                    <textarea  cols="40" rows="4" placeholder="남길말은 여기에"></textarea>
+                </u1>
+            </fieldset>
+            <fieldset>
+                <legend>이벤트와새로운소식</legend>
+                <input type="radio" name="mailing" id="mailing_y">
+                <label for="mailing_y">메일수신</label>
+                <input type="radio" name="mailing" id="mailing_y" checked>
+                <label for="mailing_y">메일수신안함</label>
+            </fieldset>
+            <div id="buttons">
+                <input type="submit" value="가입하기">
+                <input type="reset" value="취소">
+            </div>
+        </form>
+    </div>
+
+    <h1>날짜지정하기</h1>
+    <input type="data">
+    <input type="month">
+    <input type="week">
+    <h1>시간 지정하</h1>
+    <input type="time">
+    <input type="datetime-local">
+    <input type="data" min="2020-02-01" max="2023-06-17">
+
+
+    <form>
+        <fieldset>
+            <legend>배송정보</legend>
+            <ul id="shipping">
+                <li>
+                    <label for="prod">주문상품</label>
+                    <input type="text" id="prod" value="상품용3kg" readonly>
+                    
+                </li>
+                <li>
+                    <label for="user_name">이름</label>
+                    <input type="text" id="user_name" autofocus required>
+                </li>
+                <li>
+                    <label for="addr">배송주소</label>
+                    <input type="text" id="addr" required >
+                </li>
+                <li>
+                    <label for="mail">이메일</label>
+                    <input type="email" id="mail"  >
+                </li>
+                <li>
+                    <label for="phone">연락처</label>
+                    <input type="tel" id="phone" placeholder="하이픈빼고입력하세요"  required>
+
+                </li>
+                <li>
+                    <label for="d-day">배송지정</label>
+                    <input type="date" id="d-day"  ><small>(주문일로부터 최소3일이후)</small>
+
+                </li>
+                <label for="memo">메모</label>
+                <textarea id="memo" cols="40" rows="4"></textarea>
+            </ul>
+        </fieldset>
+        <div>
+            <input type="submit" value="주문하기">
+            <input type="reset" value="취소하기">
+
+        </div>
+    </form>
+
+    
 </body>
 </html>
