--- a/0619.html
+++ b/0619.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <!-- <nav>상단메뉴 또는 사이드메뉴</nav>
+    <nav>상단메뉴 또는 사이드메뉴</nav>
     <aside>사이드배너광고 또는 바로가기링크</aside>
     <header>
         주로 log title 상단메뉴
@@ -25,7 +25,7 @@
     <footer>
         연락처,저작권
     </footer> -->
-    <!-- <br><hr><img><input> 닫히는 태그가 없는태그 -->
+    <!-- <br><hr><img><input> 닫히는 태그가 없는태그
     <form action="">
         <h4>form태그 자체는 gui적인 특징 없음.이동할 페이지에 전달하고자 하는 데이터 묶음을 처리함<br>자식태그로 input또는 selet같은 태그들이 존재해야의미가 있음</h4>
         <input type="text" >
