--- a/readme.html
+++ b/readme.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-
      <table border="1">
         <caption>한국의 산</caption>
         <thead>
@@ -61,7 +60,7 @@
         </fieldset>
     </form>
     <form> 
-        <hr color="#p2">
+        <hr color="red">
         <table>
             <tbody>
                 <tr>
@@ -125,7 +124,7 @@
                 </tr>
             </tbody>
         </table>
-        <hr color="#p2">
+        <hr color="red">
         <button type="submit">회원가입</button>
         <button type="submit">취소</button>
     </form>
