--- a/0620_selector.html
+++ b/0620_selector.html
@@ -4,31 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>선택자</title>
-    <link href="/resources/css/reset.css" rel="stylesheets">
+    <!-- <link href="/resources/css/reset.css" rel="stylesheets"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <style>
-        *{
+    /*     *{
         margin: 0;
         padding: 0;
-        }
+        } */
         div p#id1{
             color: green;
             background-color: yellow;
         }
         p#id2{
-            color: blue;
+            color: rgb(56, 56, 161);
             background-color: red;
         }
         p#id3{
-            color: red;
-            background-color: gray;
+            color: rgb(253, 253, 253);
+            background-color: rgb(94, 90, 90);
         }
         /*div .c1.ca.cc{
             color: aliceblue;
         } */
+        div{
+            font-family: 'Nanum Pen Script', cursive;
+        }
+        p{
+            border-width: 5px;
+            border-color: aqua;
+            border-style: groove 3px;
+            border-radius: 10px;
+            box-shadow: white 0 0 100px inset;
+        }
     </style>
 </head>
 <body>
     <div>
+        <pre>여기
+                    그대로          표현
+        </pre>
         <p id="id1" class="c1 ca cc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         <a>끼워넣기</a>
         <p id="id2" class="c2 ca cb cc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
