--- a/UI/ui_3.html
+++ b/UI/ui_3.html
@@ -14,17 +14,16 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td>회원여부</td>
-                    <td><input type="radio" name="act"><label>회원</label>
-                    <input type="radio" name="act"><label>비회원</label></td>
+
+                    <td>회원여부: <input type="radio" name="act" ><label>회원</label>
+                    <input type="radio" name="dact"><label>비회원</label></td>
                     
                 </tr>
                 <tr>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>취미(중복선택)</td>
-                    <td><input type="checkbox" name="a">독서
+                    <td>취미(중복선택): <input type="checkbox" name="a">독서
                     <input type="checkbox" name="a">영화
                     <input type="checkbox" name="a">음악
                     <input type="checkbox" name="a">스포츠</td>
@@ -33,13 +32,13 @@
                 <tr>
                     <td></td>
                 </tr>
-                    <td>직업</td>
-                    <td >
-                        <select>
+                    <td >직업: 
+                        <select size="4">
                             <option value="29">학생</option>
                             <option value="30">회사원</option>
                             <option value="31">교사</option>
                             <option value="32">자영업</option>
+                            <option value="33">기타</option>
                         </select>
 
                     <td></td>
@@ -47,7 +46,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                </tr>
+                </tr>>
                 <tr>
                     <td><label for="memo">남기고 싶은말 :</label>
                 </tr>
@@ -56,6 +55,7 @@
                 </tr>
             </tbody>
         </table>
+        <br>
         <button type="reset">초기화</button>
         <button type="submit">전송</button>
     </fieldset>
