--- a/layout.html
+++ b/layout.html
@@ -22,7 +22,8 @@
 
          #id3{
             position: relative;
-/*          나의 자식 후손 중에 absolute가 있다면 
+/*          relative : absolute 사용시 기준점
+            나의 자식 후손 중에 absolute가 있다면 
             absolute인 요소의 높이만큼을 height로 지정해줘야함
             absolute는 주로 logo,img등 고정크기가 있는 요소들로 지정함*/
             height: 600px;
