--- a/b.html
+++ b/b.html
@@ -7,16 +7,42 @@
 </head>
 <body>
     <header>
-        <h4></h4>
-        <nav></nav>
-    </header>
-    <div>
-        <section>
-            <article></article>
-        </section>
-    </div>
-    <footer>
-        
-    </footer>
+        <div class="logo">
+            <img src="#" width="100" height="100">
+        </div>
+        <div class="login">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>아이디</td>
+                        <td><input type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>패스워드</td>
+                        <td><input type="password"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><input type="submit"><input type="reset"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+       </header>
+       <nav>
+        <ul>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴1</a></li>
+        </ul>
+       </nav>
+       <section>
+    
+       </section>
+       <footer>
+            Copyright c 1998-2019 KH Information Educational Institute All Right Reserved 
+       </footer>
 </body>
 </html>
