--- a/0626_js/0626_js.html
+++ b/0626_js/0626_js.html
@@ -104,6 +104,57 @@
         
         // arr1=arr1.concat(arr2, arr3);
         // console.log(arr1)
+
+        function sum(a,b){
+            console.log("sum 1"+a+b);
+        }
+        function sum(a,b,msg){
+            console.log("sum 2"+a+b+msg);
+            if(typeof(b)=="function"){
+                b();
+            }
+        }
+        //같은 함수선언시 마지막 함수로 정의
+        sum(10,20);
+        sum(10,20,30);
+        sum("문자",function(){console.log("매개인자로보낸익명의함수 1")}, new Object(),40,50)
+        console.log("====== 객체  ======")
+
+        var obj2 = new Object();
+        obj2.k1=100;
+        console.log(obj2)       
+
+        var obj1 = {
+            k1 : 10,
+            k2 : "dksud",
+            k3 : function(){
+                console.log("obj1의 함수")
+            },
+            k4 : 20
+        };
+        obj1.k1 =1000;
+        console.log(obj1.k1)
+        obj1["k1"]=2000;
+        obj1.k3();          //obj1안 k3의 함수 {} 안 실행
+        //obj1.k2();      //Uncaught TypeError: obj1.k2 is not a function (함수가 아님)
+        obj1.k5=100;
+                                //obj1{} 바깥에서도 새로운 키값 정의가능
+        obj1.k6=function(){};
+        console.log(obj1)
+
+
+        console.log("====== 함수  ======")
+        function fu2(){
+            console.log("안녕")
+            var obj3 =new Object();
+            obj3.k1 =10;
+            obj3.k2 =function(){
+                console.log("함수k2")
+            }
+            return obj3     //obj3에 해당하는 값을 리턴하고 함수종료 return 미작성시 148줄만 표시 obj3는 undefined
+        }
+        console.log(fu2())
+
     </script>
 </body>
 </html>
