--- a/0626_js/0706_js.html
+++ b/0626_js/0706_js.html
@@ -7,7 +7,9 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
 <style>
-    
+    body{
+        background-color: rgb(222, 222, 247);
+    }
     .hint{
         font-size: 0.7em;
     }
@@ -16,8 +18,10 @@
     }
     fieldset{
         width: 440px;
-        height: 400px;
+        height: 450px;
         padding: 20px 10px ;
+        background-color: rgb(224, 224, 224);
+        margin: 2% 40%;
     }
     button{
         height: 60px;
@@ -32,10 +36,12 @@
     border-left: none;
     border-right: none;
     border-top: none;
+    background-color: rgb(224, 224, 224);
    }
    .txt{
     float: left;
     font-size: 15px;
+    font-weight: bolder;
    }
    .hint{
     visibility: hidden;
@@ -57,7 +63,8 @@
 	}
 </script>
 <body>
-    <fieldset>
+    <div>
+    <fieldset style="border: gray;">
         <table>
             <tr>
                 <td class="txt">아이디</td>
@@ -65,11 +72,11 @@
             </tr>
             <tr class="hint">
                 <td></td>
-                <td></td>
+                <td>필수입력 항목입니다.</td>
             </tr>
             <tr>
                 <td class="txt">패스워드</td>
-                <td><input type="password" name="mpwd"></td>
+                <td><input type="password" name="mpwd" required></td>
             </tr>
             <tr class="hint">
                 <td></td>
@@ -77,7 +84,11 @@
             </tr>
             <tr>
                 <td class="txt">패스워드 확인</td>
-                <td><input type="password" name="mpwd"></td>
+                <td><input type="password" name="mpwd"required></td>
+            </tr>
+            <tr class="hint">
+                <td></td>
+                <td>필수입력 항목입니다.</td>
             </tr>
             <tr>
                 <td class="txt">이메일</td>
@@ -92,5 +103,6 @@
         <br>
         <button style="width: 100%;"><strong style="font-size: 1.2em;">가 입</strong></button>
     </fieldset>
+</div>
 </body>
 </html>
